# booking_system

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  locustfile.py  manage.py  pyproject.toml
booking_system/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
reservation/: admin.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
reservation/management/commands/: create_test_user.py
reservation/migrations/: 0001_initial.py
reservation/templates/admin/reservation/event/: update_capacity.html
reservation/tests/: conftest.py  test_api.py  test_concurrency.py  test_models.py  test_services.py  test_tasks.py
utils/: base_model.py  clients.py  singleton.py
